 	- conditionalize configfs and debugfs with CAP_SYS_RAWIO;
 	- make ExecStopPost action part of ExecStart;
 	- remove systemd-ask-password-console path and service;
 	- remove systemd-ask-password-wall path and service;
 * systemctl:
 	- show StatusErrno value in "systemctl status";
 	- remove property argument option;
 * shared:
 	- consider 0x7F(DEL) a control chracter;
 	- don't consider tabs special in string_has_cc() anymore;
 	- add string table entries for mips-le archs which were missing;
 	- remove unused functions;
 	- use strjoin in execute_directory function;
 	- remove ring util;
 	- add function to open temp files in selinux mode;
 	- don't make ~/.local/share/systemd/user a symlink;
 	- quote more shell characters in envfiles;
 	- fix error message in socket label util;
 * virt:
 	- rework container detection logic;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 * tests:
 	- remove test-ring test;
 * rules:
 	- consistently use "?*" instead of "*?";
 	- uaccess - add ID_SOFTWARE_RADIO;
 * build:
 	- do not distribute generated emergency.service;
 * bugfix:
 	- fix add comma when removed option is in the middle(fstab-generator);
 	- fix format string for usec_t type(generator);
 	- fix oneshot service resource control;
 * remove nss-myhostname support;

   systemd (214.7)
~~~~~~~
 * core:
    - redirect stdout to syslog by default;
    - remove EXEC_OUTPUT_JOURNAL type output;
    - honour rd.systemd.unit= only in the initrd, not the host;
    - clean-up signal reset logic when reexec;
    - log info when snapshots are created and removed;
    - make sure Environment fields passed in for transient units are properly written to unit files;
    - rework messages during shutdown;
    - use correct format string for UIDs;